@@ -1,3 +1,12 @@
+2007-03-25  Edward Hervey  <edward@fluendo.com>
+
+	Patch by: Johan Dahlin <jdahlin@async.com.br>
+
+	* pitivi/ui/sourcefactories.py:
+	HIG fixes.
+	Switch the explanation message from a gtk.TextView to a gtk.Label,
+	in order to avoid issues with text selections.
+
 2007-03-18  Edward Hervey  <edward@fluendo.com>
 
 	* pitivi/pitivi.py:
